@@ -1,3 +1,5 @@
+2006/3/27 -- released version 20060327_trunk
+
 2006/3/26 -- released version 20060326_trunk
 
 2006/3/25 -- released version 20060325_trunk
